# istari

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  verify_installation.py
examples/: basic_inference.py  clarity_api_integration.py  clarity_integration.py  ecommerce_session.py  explain_intent.py
istari/: __init__.py  exceptions.py
istari/core/: __init__.py  events.py  explain.py  intent_state.py  scoring.py  session.py  timeline.py  transition.py
istari/explainability/: __init__.py  attributions.py  narratives.py  summaries.py
istari/inference/: __init__.py  confidence.py  heuristics.py  rules.py  state_machine.py
istari/integrations/: __init__.py  amplitude.py  generic.py  mixpanel.py  segment.py
istari/plugins/: __init__.py  base.py  registry.py
istari/schemas/: __init__.py  base.py  ecommerce.py  web.py
istari/signals/: __init__.py  comparison.py  dwell.py  friction.py  navigation.py  price.py
istari/sources/: __init__.py  base.py
istari/sources/clarity/: __init__.py  api_client.py  mapper.py  parser.py  schema.py  source.py
istari/utils/: __init__.py  math.py  time.py  validation.py
tests/: __init__.py
tests/core/: __init__.py
tests/explainability/: __init__.py
tests/inference/: __init__.py
tests/signals/: __init__.py
